objects/Work_Part__c.object
<CustomObject><fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No spare parts meet this description or name.</errorMessage>
            <filterItems>
                <field>Product2.Replacement_Part__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Parts</relationshipLabel>
        <relationshipName>Work_Parts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Maintenance_Request__c</fullName>
        <label>Maintenance Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Work Parts</relationshipLabel>
        <relationshipName>Work_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Work Part</label><nameField>
        <displayFormat>PART-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Work Parts</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>